Adds expression from orderBy in order to prevent parameter count mismatch

--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,10 @@
         {
             "name": "Vuong Minh",
             "email": "vuongxuongminh@gmail.com"
+        },
+        {
+            "name": "Christof Opresnik",
+            "email": "hello@bit-jockey.com"
         }
     ],
     "require": {
